Adapt code style to JDK 17